--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -23,6 +23,9 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+*{
+box-sizing: border-box;
+}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -53,6 +56,55 @@ body {
 	font-family: 'Work Sans' ;
 	font-size: 14px;
 }
+.boutonProjet{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+}
+
+/* Modal */
+.js-close-modal,.js-modal-close{
+	position: relative;
+	right: -30rem;
+}
+/* icone suppression */
+.photo article{
+	position: relative;
+}
+.fa-trash-can{
+	position: absolute;
+	top: 0;
+	right: 0.1rem;
+
+}
+.modal{
+	position: fixed;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.8);
+}
+.modal-wrapper{
+	overflow: auto;
+	width: 700px;
+	padding: 20px;
+	max-width: calc(100vw - 20px);
+	max-height: calc(100vh - 20px);
+	background-color: #fff;
+}
+.js-modal{
+	text-decoration: none;
+	color: inherit;
+}
+#titlemodal{
+	text-align: center;
+	margin-bottom: 1rem;
+}
 header {
 	display: flex;
 	justify-content: space-between;
@@ -77,7 +129,11 @@ h1 > span {
 	letter-spacing: 0.1em;
 ;
 }
-
+.user-email-error-msg,
+.user-password-error-msg,
+.user-not-error-msg{
+	display: none;
+}
 h2{
 	font-family: 'Syne';
 	font-weight: 700;
@@ -179,10 +235,81 @@ input[type="submit"]{
 	text-align: center;
 	border-radius: 60px ;
 }
+ .boutons{
+	display: flex;
+	justify-content: center;
+	gap: 1rem;
+	margin-bottom: 1rem;
+	flex-wrap: wrap;
+}
+.elts{
+	border: 1px solid #1D6154;
+	padding: 0.5rem;
+	color: #1D6154;
+	font-weight: bold;
+	border-radius: 1rem;
+}
+.elts:focus{
+	background-color: #1D6154;
+	color: whitesmoke;
+}
 
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
 	margin: 2em
 }
+/* Article photo */
+article img{
+	width: 25%;
+}
+.photo,.album {
+	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-column-gap: 20px;
+	grid-row-gap: 20px;
+	border-bottom: 0.3rem solid #1D6154;
+	padding-bottom: 3rem;
+	
+}
+.photo img {
+	width: 100%;
+
+}
+.ajouter,.ajoute{
+	position: relative;
+	left: 10rem;
+	margin: 3rem;
+	width: 15rem;
+	height: 2rem;
+	border: none;
+	background-color: #1D6154;
+	border-radius: 1rem;
+	color: #fff;
+
+}
+.supprimer,.supprime{
+	text-align: center;
+	color: red;
+	padding: 1rem;
+
+}
+.top{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: row;
+	gap: 2rem;
+	background: black;
+	color: #fff;
+	padding: 1rem;
+}
+.btn{
+	border: none;
+	border-radius: 1rem;
+	padding: 0 1rem;
+	height: 2rem;
+}
+
 
