--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -64,9 +64,9 @@ body {
 }
 
 /* Modal */
-.js-close-modal,.js-modal-close{
+.js-close-modal,.js-modal-close,.js-close3-modal{
 	position: relative;
-	right: -30rem;
+	right: -38rem;
 }
 /* icone suppression */
 .photo article{
@@ -108,7 +108,8 @@ body {
 header {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px 0
+	margin: 50px 0;
+	padding: 1rem;
 }
 section {
 	margin: 50px 0
@@ -157,6 +158,7 @@ li:hover {
 #introduction {
 	display: flex;
 	align-items: center;
+	padding: 1rem;
 }
 #introduction figure {
 	flex: 1
@@ -176,6 +178,9 @@ li:hover {
 
 #introduction p {
 	margin-bottom: 0.5em;
+}
+#portfolio{
+	padding: 1rem;
 }
 #portfolio h2 {
 	text-align: center;
@@ -263,7 +268,7 @@ footer nav ul {
 article img{
 	width: 25%;
 }
-.photo,.album {
+.photo,.album{
 	width: 100%;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -310,6 +315,41 @@ article img{
 	border-radius: 1rem;
 	padding: 0 1rem;
 	height: 2rem;
+}
+/* Responsivité */
+@media (max-width:800px) {
+	.gallery {
+		width: 100%;
+		display: grid;
+		grid-template-columns:  1fr;
+
+	}
+	header {
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		margin: 50px 0
+	}
+	#introduction {
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+	}
+}
+
+/* pour ajout photo */
+.espacePhoto{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: #E8F1F6;
+	width: 420px;
+    height: 169px;
+	border: 1px solid #B1663C;
+
+}
+.fa-image{
+	font-size: 2rem;
 }
 
 
