--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -83,6 +83,7 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-direction: column;
 	left: 0;
 	top: 0;
 	width: 100%;
@@ -342,14 +343,41 @@ article img{
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
 	background: #E8F1F6;
 	width: 420px;
-    height: 169px;
+    height: 200px;
 	border: 1px solid #B1663C;
+	position: relative;
+	left: 5rem;
 
+}
+.esp{
+	padding: 1rem;
 }
 .fa-image{
-	font-size: 2rem;
+	font-size: 6rem;
+	width: 100%;
 }
-
+.info{
+	display: flex;
+	flex-direction: column;
+}
+.info input{
+	height: 5rem;
+}
+.photEnvoi{
+	border-bottom: 1px solid #b8e4fc;
+	padding-bottom: 2rem;
+	position: relative;
+}
+.val{
+	width: 11rem;
+	margin: 1.5rem;
+	position: relative;
+	left: 12rem;
+	height: 2rem;
+	border: none;
+	border-radius: 1.5rem;
+}
 
