--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -452,4 +452,49 @@ article img{
 	font-size: 5rem;
 	color:  #B9C5CC;
 }
+/* Page connection mise en page */
+.form-group {
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    margin-bottom: 16px;
+    min-width: 300px;
+}
 
+.sign-in-form {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+	flex-direction: column;
+ 
+}
+.main-title {
+    margin-bottom: 24px;
+    text-align: center;
+}
+.submit-btn {
+    background-color:#1D6154;
+    border-radius: 8px;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+    height: 39px;
+    margin-top: 24px;
+    width: 100%;
+}
+.form-group label {
+    margin-bottom: 8px;
+}
+
+.form-group input {
+    border: none;
+    height: 39px;
+    padding-left: 8px;
+}
+.form-group{
+	text-shadow: 3px 0 15px black;
+}
+#loginPage{
+	background-color: antiquewhite;
+}
