--- a/login/login.css
+++ b/login/login.css
@@ -27,3 +27,18 @@ h1 > span {
 	font-size:10px;
 	letter-spacing: 0.1em;
 }
+.form-group {
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    margin-bottom: 16px;
+    min-width: 300px;
+}
+
+.sign-in-form {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
+    min-width: 100vw;
+}
